test_case/rust-lang_rust/58566_465150337_27.rs
\n\nWith this approach, x and y share ownership of the data via the `Rc` (reference\ncount type). `RefCell` essentially performs runtime borrow checking: ensuring\nthat at most one writer or multiple readers can access the data at any one time.\n\nIf you wish to learn more about ownership in Rust, start with the chapter in the\nBook:\n\nhttps://doc.rust-lang.org/book/ch04-00-understanding-ownership.html\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/ref-suggestion.rs","byte_start":45,"byte_end":46,"line_start":3,"line_end":3,"column_start":13,"column_end":14,"is_primary":false,"text":[{"text":"    let y = x;","highlight_start":13,"highlight_end":14}],"label":"value moved here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/ref-suggestion.rs","byte_start":52,"byte_end":53,"line_start":4,"line_end":4,"column_start":5,"column_end":6,"is_primary":true,"text":[{"text":"    x; //~ ERROR use of moved value","highlight_start":5,"highlight_end":6}],"label":"value used here after move","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/ref-suggestion.rs","byte_start":20,"byte_end":21,"line_start":2,"line_end":2,"column_start":9,"column_end":10,"is_primary":false,"text":[{"text":"    let x = vec![1];","highlight_start":9,"highlight_end":10}],"label":"move occurs because `x` has type `std::vec::Vec<i32>`, which does not implement the `Copy` trait","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0382]: use of moved value: `x`\n  --> /checkout/src/test/ui/ref-suggestion.rs:4:5\n   |\nLL |     let x = vec![1];\n   |         - move occurs because `x` has type `std::vec::Vec<i32>`, which does not implement the `Copy` trait\nLL |     let y = x;\n   |             - value moved here\nLL |     x; //~ ERROR use of moved value\n   |     ^ value used here after move\n\n"}
[01:30:22] {"message":"use of moved value: `x`","code":{"code":"E0382","explanation":"\nThis error occurs when an attempt is made to use a variable after its contents\nhave been moved elsewhere. For example:\n\n